; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_tmr.c_rtc_timer_update.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_tmr.c_rtc_timer_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rtc_time_cali = common dso_local global i64 0, align 8
@last_rtc_time = common dso_local global i32 0, align 4
@last_rtc_time_us = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @rtc_timer_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @rtc_timer_update(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load i64, i64* @rtc_time_cali, align 8
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %9, %1
  %13 = call i64 (...) @system_rtc_clock_cali_proc()
  store i64 %13, i64* @rtc_time_cali, align 8
  br label %14

14:                                               ; preds = %12, %9
  %15 = call i32 (...) @system_get_rtc_time()
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @last_rtc_time, align 4
  %18 = sub nsw i32 %16, %17
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @rtc2usec(i32 %19)
  store i32 %20, i32* %5, align 4
  %21 = load i64, i64* @last_rtc_time_us, align 8
  %22 = load i32, i32* %5, align 4
  %23 = sext i32 %22 to i64
  %24 = add nsw i64 %21, %23
  store i64 %24, i64* %6, align 8
  %25 = load i32, i32* %5, align 4
  %26 = icmp sge i32 %25, 100000
  br i1 %26, label %27, label %30

27:                                               ; preds = %14
  %28 = load i32, i32* %3, align 4
  store i32 %28, i32* @last_rtc_time, align 4
  %29 = load i64, i64* %6, align 8
  store i64 %29, i64* @last_rtc_time_us, align 8
  br label %30

30:                                               ; preds = %27, %14
  %31 = load i64, i64* %6, align 8
  ret i64 %31
}

declare dso_local i64 @system_rtc_clock_cali_proc(...) #1

declare dso_local i32 @system_get_rtc_time(...) #1

declare dso_local i32 @rtc2usec(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
